// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`showCount prop should not show count by default 1`] = `
<div
  class="treeselect"
  id="test-container"
>
  <div
    class="treeselect-input treeselect-input--value-not-selected treeselect-input--bottom treeselect-input--opened"
    tabindex="-1"
  >
    <div
      class="treeselect-input__tags"
    >
      <input
        class="treeselect-input__edit"
        placeholder="Search..."
      />
    </div>
    <div
      class="treeselect-input__operators"
    >
      <span
        class="treeselect-input__clear"
        tabindex="-1"
      >
        <svg
          fill="none"
          height="15"
          stroke="#000000"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 25 25"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="15"
            x2="9"
            y1="9"
            y2="15"
          />
          <line
            x1="9"
            x2="15"
            y1="9"
            y2="15"
          />
        </svg>
      </span>
      <span
        class="treeselect-input__arrow"
      >
        <svg
          fill="none"
          height="15"
          stroke="#000000"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 25 25"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 15l-6-6-6 6"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="treeselect-list treeselect-list--bottom"
    direction="bottom"
  >
    <div
      class="treeselect-list__group-container"
      group-container-id="1"
    >
      <div
        class="treeselect-list__item treeselect-list__item--group treeselect-list__item--closed treeselect-list__item--focused"
        group="true"
        level="0"
        style="padding-left: 0px;"
        tabindex="-1"
        title="England"
      >
        <span
          class="treeselect-list__item-icon"
          tabindex="-1"
        >
          <svg
            fill="none"
            height="15"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 25 25"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 18l6-6-6-6"
            />
          </svg>
        </span>
        <div
          class="treeselect-list__item-checkbox-container"
        >
          <span
            class="treeselect-list__item-checkbox-icon"
          />
          <input
            class="treeselect-list__item-checkbox"
            input-id="1"
            tabindex="-1"
            type="checkbox"
          />
        </div>
        <label
          class="treeselect-list__item-label"
        >
          England
        </label>
      </div>
      <div
        class="treeselect-list__group-container"
        group-container-id="2"
      >
        <div
          class="treeselect-list__item treeselect-list__item--group treeselect-list__item--closed treeselect-list__item--hidden"
          group="true"
          level="1"
          style="padding-left: 20px;"
          tabindex="-1"
          title="London"
        >
          <span
            class="treeselect-list__item-icon"
            tabindex="-1"
          >
            <svg
              fill="none"
              height="15"
              stroke="#000000"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 25 25"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 18l6-6-6-6"
              />
            </svg>
          </span>
          <div
            class="treeselect-list__item-checkbox-container"
          >
            <span
              class="treeselect-list__item-checkbox-icon"
            />
            <input
              class="treeselect-list__item-checkbox"
              input-id="2"
              tabindex="-1"
              type="checkbox"
            />
          </div>
          <label
            class="treeselect-list__item-label"
          >
            London
          </label>
        </div>
        <div
          class="treeselect-list__item treeselect-list__item--hidden"
          group="false"
          level="2"
          style="padding-left: 60px;"
          tabindex="-1"
          title="Chelsea"
        >
          <div
            class="treeselect-list__item-checkbox-container"
          >
            <span
              class="treeselect-list__item-checkbox-icon"
            />
            <input
              class="treeselect-list__item-checkbox"
              input-id="3"
              tabindex="-1"
              type="checkbox"
            />
          </div>
          <label
            class="treeselect-list__item-label"
          >
            Chelsea
          </label>
        </div>
        <div
          class="treeselect-list__item treeselect-list__item--hidden"
          group="false"
          level="2"
          style="padding-left: 60px;"
          tabindex="-1"
          title="West End"
        >
          <div
            class="treeselect-list__item-checkbox-container"
          >
            <span
              class="treeselect-list__item-checkbox-icon"
            />
            <input
              class="treeselect-list__item-checkbox"
              input-id="4"
              tabindex="-1"
              type="checkbox"
            />
          </div>
          <label
            class="treeselect-list__item-label"
          >
            West End
          </label>
        </div>
      </div>
      <div
        class="treeselect-list__item treeselect-list__item--hidden"
        group="false"
        level="1"
        style="padding-left: 40px;"
        tabindex="-1"
        title="Brighton"
      >
        <div
          class="treeselect-list__item-checkbox-container"
        >
          <span
            class="treeselect-list__item-checkbox-icon"
          />
          <input
            class="treeselect-list__item-checkbox"
            input-id="5"
            tabindex="-1"
            type="checkbox"
          />
        </div>
        <label
          class="treeselect-list__item-label"
        >
          Brighton
        </label>
      </div>
    </div>
    <div
      class="treeselect-list__group-container"
      group-container-id="6"
    >
      <div
        class="treeselect-list__item treeselect-list__item--group treeselect-list__item--closed"
        group="true"
        level="0"
        style="padding-left: 0px;"
        tabindex="-1"
        title="France"
      >
        <span
          class="treeselect-list__item-icon"
          tabindex="-1"
        >
          <svg
            fill="none"
            height="15"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 25 25"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 18l6-6-6-6"
            />
          </svg>
        </span>
        <div
          class="treeselect-list__item-checkbox-container"
        >
          <span
            class="treeselect-list__item-checkbox-icon"
          />
          <input
            class="treeselect-list__item-checkbox"
            input-id="6"
            tabindex="-1"
            type="checkbox"
          />
        </div>
        <label
          class="treeselect-list__item-label"
        >
          France
        </label>
      </div>
      <div
        class="treeselect-list__item treeselect-list__item--hidden"
        group="false"
        level="1"
        style="padding-left: 40px;"
        tabindex="-1"
        title="Paris"
      >
        <div
          class="treeselect-list__item-checkbox-container"
        >
          <span
            class="treeselect-list__item-checkbox-icon"
          />
          <input
            class="treeselect-list__item-checkbox"
            input-id="7"
            tabindex="-1"
            type="checkbox"
          />
        </div>
        <label
          class="treeselect-list__item-label"
        >
          Paris
        </label>
      </div>
      <div
        class="treeselect-list__item treeselect-list__item--hidden"
        group="false"
        level="1"
        style="padding-left: 40px;"
        tabindex="-1"
        title="Lyon"
      >
        <div
          class="treeselect-list__item-checkbox-container"
        >
          <span
            class="treeselect-list__item-checkbox-icon"
          />
          <input
            class="treeselect-list__item-checkbox"
            input-id="8"
            tabindex="-1"
            type="checkbox"
          />
        </div>
        <label
          class="treeselect-list__item-label"
        >
          Lyon
        </label>
      </div>
    </div>
    <div
      class="treeselect-list__empty treeselect-list__empty--hidden"
      title="No results found..."
    >
      <span
        class="treeselect-list__empty-icon"
      >
        <svg
          fill="none"
          height="15"
          stroke="#000000"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 25 25"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12.01"
            y1="17"
            y2="17"
          />
        </svg>
      </span>
      <span
        class="treeselect-list__empty-text"
      >
        No results found...
      </span>
    </div>
  </div>
</div>
`;

exports[`showCount prop should show count when showCount is true 1`] = `
<div
  class="treeselect"
  id="test-container"
>
  <div
    class="treeselect-input treeselect-input--value-not-selected treeselect-input--bottom treeselect-input--opened"
    tabindex="-1"
  >
    <div
      class="treeselect-input__tags"
    >
      <input
        class="treeselect-input__edit"
        placeholder="Search..."
      />
    </div>
    <div
      class="treeselect-input__operators"
    >
      <span
        class="treeselect-input__clear"
        tabindex="-1"
      >
        <svg
          fill="none"
          height="15"
          stroke="#000000"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 25 25"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="15"
            x2="9"
            y1="9"
            y2="15"
          />
          <line
            x1="9"
            x2="15"
            y1="9"
            y2="15"
          />
        </svg>
      </span>
      <span
        class="treeselect-input__arrow"
      >
        <svg
          fill="none"
          height="15"
          stroke="#000000"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 25 25"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 15l-6-6-6 6"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="treeselect-list treeselect-list--bottom"
    direction="bottom"
  >
    <div
      class="treeselect-list__group-container"
      group-container-id="1"
    >
      <div
        class="treeselect-list__item treeselect-list__item--group treeselect-list__item--closed treeselect-list__item--focused"
        group="true"
        level="0"
        style="padding-left: 0px;"
        tabindex="-1"
        title="England"
      >
        <span
          class="treeselect-list__item-icon"
          tabindex="-1"
        >
          <svg
            fill="none"
            height="15"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 25 25"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 18l6-6-6-6"
            />
          </svg>
        </span>
        <div
          class="treeselect-list__item-checkbox-container"
        >
          <span
            class="treeselect-list__item-checkbox-icon"
          />
          <input
            class="treeselect-list__item-checkbox"
            input-id="1"
            tabindex="-1"
            type="checkbox"
          />
        </div>
        <label
          class="treeselect-list__item-label"
        >
          England
          <span
            class="treeselect-list__item-label-counter"
          >
            (2)
          </span>
        </label>
      </div>
      <div
        class="treeselect-list__group-container"
        group-container-id="2"
      >
        <div
          class="treeselect-list__item treeselect-list__item--group treeselect-list__item--closed treeselect-list__item--hidden"
          group="true"
          level="1"
          style="padding-left: 20px;"
          tabindex="-1"
          title="London"
        >
          <span
            class="treeselect-list__item-icon"
            tabindex="-1"
          >
            <svg
              fill="none"
              height="15"
              stroke="#000000"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 25 25"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 18l6-6-6-6"
              />
            </svg>
          </span>
          <div
            class="treeselect-list__item-checkbox-container"
          >
            <span
              class="treeselect-list__item-checkbox-icon"
            />
            <input
              class="treeselect-list__item-checkbox"
              input-id="2"
              tabindex="-1"
              type="checkbox"
            />
          </div>
          <label
            class="treeselect-list__item-label"
          >
            London
            <span
              class="treeselect-list__item-label-counter"
            >
              (2)
            </span>
          </label>
        </div>
        <div
          class="treeselect-list__item treeselect-list__item--hidden"
          group="false"
          level="2"
          style="padding-left: 60px;"
          tabindex="-1"
          title="Chelsea"
        >
          <div
            class="treeselect-list__item-checkbox-container"
          >
            <span
              class="treeselect-list__item-checkbox-icon"
            />
            <input
              class="treeselect-list__item-checkbox"
              input-id="3"
              tabindex="-1"
              type="checkbox"
            />
          </div>
          <label
            class="treeselect-list__item-label"
          >
            Chelsea
          </label>
        </div>
        <div
          class="treeselect-list__item treeselect-list__item--hidden"
          group="false"
          level="2"
          style="padding-left: 60px;"
          tabindex="-1"
          title="West End"
        >
          <div
            class="treeselect-list__item-checkbox-container"
          >
            <span
              class="treeselect-list__item-checkbox-icon"
            />
            <input
              class="treeselect-list__item-checkbox"
              input-id="4"
              tabindex="-1"
              type="checkbox"
            />
          </div>
          <label
            class="treeselect-list__item-label"
          >
            West End
          </label>
        </div>
      </div>
      <div
        class="treeselect-list__item treeselect-list__item--hidden"
        group="false"
        level="1"
        style="padding-left: 40px;"
        tabindex="-1"
        title="Brighton"
      >
        <div
          class="treeselect-list__item-checkbox-container"
        >
          <span
            class="treeselect-list__item-checkbox-icon"
          />
          <input
            class="treeselect-list__item-checkbox"
            input-id="5"
            tabindex="-1"
            type="checkbox"
          />
        </div>
        <label
          class="treeselect-list__item-label"
        >
          Brighton
        </label>
      </div>
    </div>
    <div
      class="treeselect-list__group-container"
      group-container-id="6"
    >
      <div
        class="treeselect-list__item treeselect-list__item--group treeselect-list__item--closed"
        group="true"
        level="0"
        style="padding-left: 0px;"
        tabindex="-1"
        title="France"
      >
        <span
          class="treeselect-list__item-icon"
          tabindex="-1"
        >
          <svg
            fill="none"
            height="15"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 25 25"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 18l6-6-6-6"
            />
          </svg>
        </span>
        <div
          class="treeselect-list__item-checkbox-container"
        >
          <span
            class="treeselect-list__item-checkbox-icon"
          />
          <input
            class="treeselect-list__item-checkbox"
            input-id="6"
            tabindex="-1"
            type="checkbox"
          />
        </div>
        <label
          class="treeselect-list__item-label"
        >
          France
          <span
            class="treeselect-list__item-label-counter"
          >
            (2)
          </span>
        </label>
      </div>
      <div
        class="treeselect-list__item treeselect-list__item--hidden"
        group="false"
        level="1"
        style="padding-left: 40px;"
        tabindex="-1"
        title="Paris"
      >
        <div
          class="treeselect-list__item-checkbox-container"
        >
          <span
            class="treeselect-list__item-checkbox-icon"
          />
          <input
            class="treeselect-list__item-checkbox"
            input-id="7"
            tabindex="-1"
            type="checkbox"
          />
        </div>
        <label
          class="treeselect-list__item-label"
        >
          Paris
        </label>
      </div>
      <div
        class="treeselect-list__item treeselect-list__item--hidden"
        group="false"
        level="1"
        style="padding-left: 40px;"
        tabindex="-1"
        title="Lyon"
      >
        <div
          class="treeselect-list__item-checkbox-container"
        >
          <span
            class="treeselect-list__item-checkbox-icon"
          />
          <input
            class="treeselect-list__item-checkbox"
            input-id="8"
            tabindex="-1"
            type="checkbox"
          />
        </div>
        <label
          class="treeselect-list__item-label"
        >
          Lyon
        </label>
      </div>
    </div>
    <div
      class="treeselect-list__empty treeselect-list__empty--hidden"
      title="No results found..."
    >
      <span
        class="treeselect-list__empty-icon"
      >
        <svg
          fill="none"
          height="15"
          stroke="#000000"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 25 25"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12.01"
            y1="17"
            y2="17"
          />
        </svg>
      </span>
      <span
        class="treeselect-list__empty-text"
      >
        No results found...
      </span>
    </div>
  </div>
</div>
`;
